--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,9 +16,10 @@
     "allowSyntheticDefaultImports": true,
     "outDir": "build",
     "lib": ["es6", "es7", "dom"],
-    "baseUrl": "src",
+    "baseUrl": ".",
     "paths": {
-      "app/*": ["./app/*"]
+      "app/*": ["src/app/*"],
+      "src/*": ["src/*"]
 		},
 		"typeRoots": [
 			"node_modules/@types"
